--- a/smart-materials/frontend/index.html
+++ b/smart-materials/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Materials - AI Material Scanner</title>
+    <title>Easy Materials - AI Material Scanner</title>
   </head>
   <body>
     <div id="root"></div>
